--- a/glide.yaml
+++ b/glide.yaml
@@ -6,17 +6,14 @@ import:
   - prometheus
   - prometheus/promhttp
 - package: github.com/prometheus/client_model
-  version: master
   subpackages:
   - go
 - package: github.com/uber-go/tally
-  version: ^3.3.0
+  version: ^3.3.1
 - package: go.uber.org/atomic
-  version: ^1.2.0
-- package: go.uber.org/multierr
-  version: ^1.1.0
+  version: ^1.3.1
+testImport:
 - package: github.com/prometheus/common
-  version: master
   subpackages:
   - model
 - package: github.com/stretchr/testify
