--- a/glide.yaml
+++ b/glide.yaml
@@ -1,7 +1,7 @@
 package: go.uber.org/net/metrics
 import:
 - package: github.com/prometheus/client_golang
-  version: ~0.9.0
+  version: '>= 0.9, < 2'
   subpackages:
   - prometheus
   - prometheus/promhttp
